quakejs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: quake
  namespace: quakejs
spec:
  type: ClusterIP
  selector:
    run: quakejs
  ports:
    - port: 8080
      targetPort: 8080
      name: client
    - port: 9090
      targetPort: 9090
      name: content
